fixes #2 - settings tab overflow

--- a/ModernDeck/sources/moderndeck.css
+++ b/ModernDeck/sources/moderndeck.css
@@ -2596,8 +2596,7 @@ a .column-title-back .icon:after {
 
 .mdl {
 	display:inline-block;
-	width: 40%;
-	min-width: 480px;
+	min-width: 580px;
 	max-width: 100vw;
 	text-align:left;
 	opacity:1;
